--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,7 @@
 {
   "presets": [
     ["@babel/preset-env", { "targets": { "esmodules": true } }],
-    ["@babel/preset-react", { "runtime": "automatic" }]
+    ["@babel/preset-react", { "runtime": "automatic" }],
+    ["@babel/preset-typescript"]
   ]
 }
