--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "react-query": "^3.39.3",
+    "axios": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
